--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,16 +11,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.7.2",
-    
-   
-    "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1",
     "@chakra-ui/react": "^2.8.2",
-    
+    "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1"
   },
   "devDependencies": {
