--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-fontawesome": "^1.7.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-pdf": "^9.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-type-animation": "^3.2.0",
