--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "react-scripts start",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -18,10 +19,11 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
+    
+    "react-scripts": "^5.0.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    
     "react-fontawesome": "^1.7.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
@@ -29,7 +31,13 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-type-animation": "^3.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    
+    "js-cookie": "^3.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+    
+    
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
