--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,36 +19,20 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
-    
-<<<<<<< HEAD
-=======
-   
-    
-    
-    
-    
-    
-    
-    
->>>>>>> d06c04a85e27f4d60f0491134fc3eb445724f74b
-    "react-scripts": "^5.0.1",
     "date-fns": "^3.6.0",
-    "framer-motion": "^11.2.6",
-    
+    "framer-motion": "^11.2.10",
+    "js-cookie": "^3.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-fontawesome": "^1.7.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-pdf": "^9.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-scripts": "^5.0.1",
     "react-type-animation": "^3.2.0",
-    "redux-persist": "^6.0.0",
-    
-    "js-cookie": "^3.0.5",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-    
-    
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
