--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.1.0",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
+    "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
