--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "main": "backend/server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js",
-    "dev": "nodemon backend/server.js"
+    "dev": "NODE_ENV=development nodemon backend/server.js",
+    "start": "NODE_ENV=production nodemon backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
@@ -37,6 +38,7 @@
     "nodemon": "^3.1.0",
     "path": "^0.12.7",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "rollup-plugin-visualizer": "^5.12.0"
   }
 }
