--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.10",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
